# curso-django

./: .gitattributes  .gitignore  .travis.yml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
contrib/: env-sample
pypro/: conftest.py  settings.py  urls.py  wsgi.py
pypro/aperitivos/: tests.py  urls.py  views.py
pypro/aperitivos/migrations/: 0001_initial.py  0002_auto_20200704_1314.py
pypro/aperitivos/templates/aperitivos/: indice.html  video.html
pypro/aperitivos/tests/: test_aperito.py  test_indice.py  test_video.py
pypro/base/: admin.py  models.py
pypro/base/migrations/: 0001_initial.py
pypro/base/templates/base/: base.html  footer.html  home.html
pypro/base/templates/registration/: login.html  password_reset_form.html
pypro/base/tests/: test_home.py  test_login.py
pypro/modulos/: admin.py  facade.py  views.py
pypro/modulos/migrations/: 0001_initial.py  0002_modulo_slug.py  0003_populando_slug.py  0004_slug_unico_e_nao_nulo.py  0005_aula.py  0006_aula_vimeo_id.py  0007_vimeo_obrigatorio.py
pypro/modulos/templates/modulos/: aula_detalhe.html  indice.html  modulo_detalhe.html
pypro/modulos/tests/: test_aba_de_modulos.py  test_aula_detalhe.py  test_facade.py  test_modulo_detalhe.py  test_modulos_indice.py
pypro/turmas/migrations/: 0001_initial.py  0002_criacao_matricula.py
pypro/turmas/templates/turmas/: indice.html
