[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["alisonamerico <alison.americo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
